--- a/doc/whi_frp_ms_supp.tex
+++ b/doc/whi_frp_ms_supp.tex
@@ -97,26 +97,31 @@ response to dietary fat in the Women's Health Initiative}
 \usepackage{makecell}
 \usepackage{xcolor}
 
+\usepackage{float}
+
 \begin{document}
 \maketitle
 
+Kenneth Westerman, Qing Liu, Simin Liu, Laurence D. Parnell, Paola
+Sebastiani, Paul Jacques, Dawn L. DeMeo, José M. Ordovás
+
 \newcommand{\beginsupplement}{%
         \setcounter{table}{0}
-        \renewcommand{\thetable}{S\arabic{table}}%
+        \renewcommand{\thetable}{\arabic{table}}%
         \setcounter{figure}{0}
-        \renewcommand{\thefigure}{S\arabic{figure}}%
+        \renewcommand{\thefigure}{\arabic{figure}}%
      }
 %
         \setcounter{table}{0}
-        \renewcommand{\thetable}{S\arabic{table}}%
+        \renewcommand{\thetable}{\arabic{table}}%
         \setcounter{figure}{0}
-        \renewcommand{\thefigure}{S\arabic{figure}}%
+        \renewcommand{\thefigure}{\arabic{figure}}%
 
 \begin{ThreePartTable}
 \begin{TableNotes}
 \item Power calculations were undertaken using the Quanto tool, with parameters set as follows: additive model, SNP main effect of 0.5\% of trait variance, binary environment with 50\% prevalence, and environmental effect explaining 10\% of the trait variance.
 \end{TableNotes}
-\begin{longtable}{rrrr}
+\begin{longtable}[t]{rrrr}
 \caption{\label{tab:show-power-calcs}Sample size necessary to achieve power of 0.8}\\
 \toprule
 GxE variance explained (\%) & N (nominal) & N (suggestive) & N (genome-wide)\\
@@ -130,47 +135,53 @@ GxE variance explained (\%) & N (nominal) & N (suggestive) & N (genome-wide)\\
 \end{longtable}
 \end{ThreePartTable}
 
-\begin{figure}
-\centering
-\includegraphics{workflow.pdf}
-\caption{Workflow of the study. First, a series of genome-wide
-interaction studies (GWIS) were conducted with dietary fat as the
-exposure for each of six cardiovascular risk factors (CRFs). Next,
-dietary fat response scores were developed using GWIS summary statistics
-and tested for the prediction of one-year CRF changes in the Dietary
-Modification trial intervention arm. Finally, the LDL-C score was tested
-for the prediction of differential effects on chronic disease
-development over approximately twenty years of follow-up.}
-\end{figure}
-
-\begin{figure}
-\centering
-\includegraphics{figures/show-qq-plots-1.pdf}
-\caption{Q-Q plots from individual CRF GWIS. The distribution of
-p-values from each GWIS is plotted against the expected uniform p-value
-distribution. Plots correspond to: a) BMI, b) SBP, c) LDL-C, d) HDL-C,
-e) TG, and f) FG.}
-\end{figure}
-
 \begin{ThreePartTable}
 \begin{TableNotes}
 \item[1] Sample size available with 1-year follow-up for each CRF
 \item[2] Number of SNPs selected by the pruning-and-thresholding algorithm for each CRF-threshold combination
 \item[3] Standardized effect size (SES) represents the regression coefficient estimate in terms of CRF standard deviation per responder score standard deviation
 \end{TableNotes}
-\begin{longtable}{lllllllllll}
+\begin{longtable}[t]{lllllllllll}
 \caption{\label{tab:show-test-scores-alternate-filters}Responder score effects on CRF changes in DM trial participants across main-effect filter thresholds}\\
 \toprule
 \multicolumn{2}{c}{ } & \multicolumn{3}{c}{All variants} & \multicolumn{3}{c}{Nominal main effect (p<0.05)} & \multicolumn{3}{c}{Suggestive main effect (p<1e-5)} \\
 \cmidrule(l{3pt}r{3pt}){3-5} \cmidrule(l{3pt}r{3pt}){6-8} \cmidrule(l{3pt}r{3pt}){9-11}
 CRF & N\textsuperscript{1} & \# SNPs\textsuperscript{2} & SES\textsuperscript{3} & P-value & \# SNPs\textsuperscript{2} & SES\textsuperscript{3} & P-value & \# SNPs\textsuperscript{2} & SES\textsuperscript{3} & P-value\\
 \midrule
-BMI & 1988 & 158365 & 0.049 & 0.026 & 6042 & 0.027 & 0.221 & 569 & 0.027 & 0.236\\
-FG & 281 & 161906 & -0.078 & 0.495 & 1924 & 0.016 & 0.791 & 7 & 0.006 & 0.92\\
-HDL-C & 150 & 153942 & 0.028 & 0.63 & 1731 & -0.06 & 0.471 & 42 & 0.085 & 0.258\\
-LDL-C & 145 & 156313 & 0.035 & 0.729 & 1760 & -0.179 & 0.026 & 46 & 0.01 & 0.901\\
-SBP & 2004 & 153942 & -0.016 & 0.473 & 1536 & 0.029 & 0.196 & 6 & 0 & 0.999\\
-TG & 150 & 152006 & -0.184 & 0.203 & 1774 & -0.139 & 0.066 & 47 & -0.043 & 0.573\\
+BMI & 1988 & 158365 & 0.058 & 0.009 & 6042 & 0.029 & 0.189 & 569 & 0.027 & 0.221\\
+SBP & 2004 & 153942 & -0.016 & 0.473 & 1536 & 0.034 & 0.125 & 6 & -0.003 & 0.899\\
+LDL-C & 145 & 156313 & 0.124 & 0.337 & 1760 & -0.191 & 0.02 & 46 & 0 & 1\\
+HDL-C & 150 & 153942 & 0.031 & 0.611 & 1731 & -0.083 & 0.32 & 42 & 0.086 & 0.244\\
+TG & 150 & 152006 & -0.067 & 0.66 & 1774 & -0.146 & 0.055 & 47 & -0.034 & 0.661\\
+FG & 281 & 161906 & -0.056 & 0.64 & 1924 & 0.011 & 0.853 & 7 & 0.004 & 0.952\\
+\bottomrule
+\insertTableNotes
+\end{longtable}
+\end{ThreePartTable}
+
+\newpage
+
+Online Supplementary Materials: A gene-diet interaction-based score
+predicts response to dietary fat in the Women's Health Initiative
+
+\begin{ThreePartTable}
+\begin{TableNotes}
+\item[1] Sample size available with 1-year follow-up measurements for each CRF
+\item[2] Std. effect size represents the regression coefficient estimate in terms of CRF standard deviation per responder score standard deviation
+\end{TableNotes}
+\begin{longtable}[t]{llllllllll}
+\caption{\label{tab:show-test-scores-cross-ancestry}Responder score effects on CRF changes in DM trial participants across ancestries}\\
+\toprule
+\multicolumn{1}{c}{} & \multicolumn{3}{c}{All combined} & \multicolumn{3}{c}{Black} & \multicolumn{3}{c}{Hispanic} \\
+\cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
+CRF & N\textsuperscript{1} & SES\textsuperscript{2} & P-value & N\textsuperscript{1} & SES\textsuperscript{2} & P-value & N\textsuperscript{1} & SES\textsuperscript{2} & P-value\\
+\midrule
+BMI & 3606 & -0.019 & 0.263 & 1214 & 0.002 & 0.941 & 404 & 0.019 & 0.714\\
+SBP & 3645 & 0.046 & 0.005 & 1230 & 0.011 & 0.692 & 411 & -0.016 & 0.744\\
+LDL-C & 422 & 0.084 & 0.068 & 206 & 0.06 & 0.373 & 71 & 0.124 & 0.24\\
+HDL-C & 430 & -0.059 & 0.24 & 206 & -0.087 & 0.242 & 74 & -0.032 & 0.815\\
+TG & 430 & -0.073 & 0.122 & 206 & -0.02 & 0.778 & 74 & -0.1 & 0.424\\
+FG & 572 & 0.077 & 0.048 & 214 & -0.01 & 0.876 & 77 & 0.006 & 0.961\\
 \bottomrule
 \insertTableNotes
 \end{longtable}
@@ -180,19 +191,19 @@ TG & 150 & 152006 & -0.184 & 0.203 & 1774 & -0.139 & 0.066 & 47 & -0.043 & 0.573
 \begin{TableNotes}
 \item[1] Standardized effect size (SES) represents the regression coefficient estimate in terms of CRF standard deviation per responder score standard deviation
 \end{TableNotes}
-\begin{longtable}{llllllllll}
-\caption{\label{tab:show-test-scores-cross-ancestry}Responder score effects on CRF changes in DM trial participants across ancestries}\\
+\begin{longtable}[t]{lllllll}
+\caption{\label{tab:show-test-scores-ldpred}LDpred-based responder score effects on CRF changes in DM trial participants across causal variant fractions (F)}\\
 \toprule
-\multicolumn{1}{c}{} & \multicolumn{3}{c}{All combined} & \multicolumn{3}{c}{Black} & \multicolumn{3}{c}{Hispanic} \\
-\cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
-CRF & N & SES\textsuperscript{1} & P-value & N & SES\textsuperscript{1} & P-value & N & SES\textsuperscript{1} & P-value\\
+\multicolumn{1}{c}{ } & \multicolumn{2}{c}{F = 0.001} & \multicolumn{2}{c}{F = 0.01} & \multicolumn{2}{c}{F = 0.1} \\
+\cmidrule(l{3pt}r{3pt}){2-3} \cmidrule(l{3pt}r{3pt}){4-5} \cmidrule(l{3pt}r{3pt}){6-7}
+CRF & SES\textsuperscript{1} & P-value & SES\textsuperscript{1} & P-value & SES\textsuperscript{1} & P-value\\
 \midrule
-BMI & 3606 & -0.02 & 0.24 & 1214 & 0 & 0.994 & 404 & 0.018 & 0.719\\
-FG & 572 & 0.08 & 0.043 & 214 & -0.004 & 0.955 & 77 & -0.014 & 0.901\\
-HDL-C & 430 & -0.06 & 0.224 & 206 & -0.096 & 0.182 & 74 & -0.057 & 0.66\\
-LDL-C & 422 & 0.084 & 0.066 & 206 & 0.055 & 0.412 & 71 & 0.126 & 0.227\\
-SBP & 3645 & 0.041 & 0.015 & 1230 & 0 & 0.991 & 411 & -0.008 & 0.868\\
-TG & 430 & -0.075 & 0.112 & 206 & -0.023 & 0.743 & 74 & -0.098 & 0.433\\
+BMI & 0.001 & 0.969 & 0.003 & 0.906 & 0.003 & 0.906\\
+SBP & -0.016 & 0.478 & -0.011 & 0.617 & -0.011 & 0.625\\
+LDL-C & -0.038 & 0.652 & -0.051 & 0.555 & -0.053 & 0.533\\
+HDL-C & 0.059 & 0.484 & 0.069 & 0.422 & 0.071 & 0.409\\
+TG & 0.015 & 0.863 & 0.019 & 0.828 & 0.018 & 0.832\\
+FG & 0.038 & 0.538 & 0.051 & 0.399 & 0.052 & 0.395\\
 \bottomrule
 \insertTableNotes
 \end{longtable}
@@ -200,22 +211,39 @@ TG & 430 & -0.075 & 0.112 & 206 & -0.023 & 0.743 & 74 & -0.098 & 0.433\\
 
 \begin{ThreePartTable}
 \begin{TableNotes}
-\item[1] Std. effect size represents the regression coefficient estimate in terms of CRF standard deviation per responder score standard deviation
+\item[1] Sample size available with 1-year follow-up measurements for each CRF
+\item[2] Std. effect size represents the regression coefficient estimate in terms of CRF standard deviation per responder score standard deviation
 \end{TableNotes}
-\begin{longtable}{lrrrr}
+\begin{longtable}[t]{lrrrr}
 \caption{\label{tab:show-test-ldl-scores-other-rfs}LDL-FRS effects on alternate CRF changes in DM trial participants}\\
 \toprule
-Outcome risk factor & \# SNPs in risk score & Sample size & Std. effect size\textsuperscript{1} & P-value\\
+Outcome risk factor & \# SNPs in risk score & N\textsuperscript{1} & Std. effect size\textsuperscript{2} & P-value\\
 \midrule
-BMI & 1747 & 1988 & -0.02 & 0.36\\
-SBP & 1747 & 2004 & 0.00 & 0.83\\
-HDL-C & 1747 & 150 & -0.07 & 0.39\\
-TG & 1747 & 150 & 0.11 & 0.16\\
-FG & 1747 & 281 & 0.01 & 0.82\\
+BMI & 1760 & 1988 & -0.02 & 0.48\\
+SBP & 1760 & 2004 & 0.00 & 0.85\\
+HDL-C & 1760 & 150 & -0.07 & 0.40\\
+TG & 1760 & 150 & 0.11 & 0.18\\
+FG & 1760 & 281 & 0.01 & 0.93\\
 \bottomrule
 \insertTableNotes
 \end{longtable}
 \end{ThreePartTable}
+
+\newpage
+Online Supplementary Materials: A gene-diet interaction-based score
+predicts response to dietary fat in the Women's Health Initiative
+
+\begin{figure}[H]
+\centering
+\includegraphics{figures/show-qq-plots-1.pdf}
+\caption{Q-Q plots from individual CRF GWIS. The distribution of
+p-values from each GWIS is plotted against the expected uniform p-value
+distribution. Plots correspond to: A) BMI, B) SBP, C) LDL-C, D) HDL-C,
+E) TG, and F) FG. Lambda values above each plot represent genomic
+inflation estimates. BMI: body mass index, SBP: systolic blood pressure,
+LDL-C: LDL cholesterol, HDL-C: HDL cholesterol, TG: triglycerides, FG:
+fasting glucose.}
+\end{figure}
 
 
 \end{document}
